# Wazuh-MCP-Server

./: .dockerignore  .env.docker.template  .env.example  .env.production.example  .env.production.template  .env.wazuh.template  .gitignore  .gitleaks.toml  .version-state.json  ALL_29_TOOLS_MCP_CONVERSION.md  ARCHITECTURE_REFACTOR_PLAN.md  CHANGELOG.md  CODE_QUALITY_AUDIT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEVELOPER_GUIDE.md  DOCKER_CLI_REFERENCE.md  DOCKER_COMPATIBILITY.md  DOCKER_DEPLOY.md  DOCKER_ONLY_TRANSFORMATION.md  DOCKER_USAGE.md  DOCKER_VERSIONS.md  Dockerfile  FASTMCP_COMPLIANCE.md  FASTMCP_COMPLIANCE_AUDIT.md  INSTALLATION.md  KNOWLEDGE_BASE.md  MANIFEST.in  MCP_COMPLIANCE_VERIFICATION.md  PACKAGE_INSTALLATION.md  PACKAGE_SUMMARY.md  PACKAGE_USAGE.md  PREBUILT_IMAGE.md  PRODUCTION_AUDIT_20251124.md  PRODUCTION_AUDIT_v3.0.0.md  PRODUCTION_READINESS.md  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v2.1.0.md  (+52 more)
.github/workflows/: branch-sync.yml  ci.yml  docker-publish.yml  publish.yml  release.yml  security-scan.yml  security.yml
archive/install/: install-docker-windows.ps1
archive/scripts/: configure.sh  quick-start.sh  validate-production.sh
config/: backup.conf  default.env  haproxy.cfg  redis-entrypoint.sh  redis.conf  sentinel-entrypoint.sh  sentinel.conf  wazuh.env  wazuh.env.example
config/alertmanager/: alertmanager.yml
config/prometheus/: alerts.yml
docker/: .env.docker  README.md  entrypoint.sh
docs/: ARCHITECTURE_COMPARISON.md  DOCKER_HUB_SETUP.md  DOCKER_README.md  GITHUB_DISCUSSION_V3_ROADMAP.md  MAIN_VS_V3_COMPARISON.md  MIGRATION_GUIDE.md  PRODUCTION_READINESS_AUDIT_v3.0.0.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  api-reference.md  claude-desktop-setup.md  configuration.md  docker-deployment.md  installation.md  nginx-reverse-proxy.conf  security-guide.md  tools.md  troubleshooting.md  v3.md
docs/api/: README.md
docs/development/: CONTRIBUTING.md
docs/guides/: CONFIGURATION.md  DOCKER_INSTALLATION_GUIDE.md  INSTALL_QUICK_REFERENCE.md  PRODUCTION_DEPLOYMENT.md
docs/operations/: INCIDENT_RESPONSE.md  PRODUCTION_DEPLOYMENT.md  RUNBOOKS.md  production.md
docs/security/: README.md
docs/troubleshooting/: docker-troubleshooting.md
docs/user-guides/: claude-desktop-setup.md
docs/v3/: README_v3.md
examples/: package_usage.py
examples/configuration_examples/: production_config.env
install/: README.md  install-docker-debian.sh  install-docker-macos.sh
legacy-backup/: fastmcp_resources.py  server.py
scripts/: backup-system.sh  configure.sh  deploy-ha.sh  deploy-production.sh  docker-backup.sh  encrypt-config.py  fix_imports.py  install-docker-redhat.sh  quick-start.sh  secure_permissions.sh  security-scan.sh  setup-alerting.sh  test-deployment.sh  test-http-mode.sh  test-server.sh  validate_setup.py  validate_v3_release.py  verify-installation.sh
tests/: test_agent_ports.py  test_agent_processes.py  test_analyze_threats.py  test_check_agent_health.py  test_check_ioc.py  test_compliance_check.py  test_fastmcp_server.py  test_get_alerts.py  test_production_server.py  test_risk_assessment.py  test_search_wazuh_logs.py  test_security_analyzer.py  test_wazuh_stats.py  test_weekly_stats.py
tools/: README.md  deploy-validate.py  test-functionality.py  validate-production.py
(+65 files in other folders)
