[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wazuh-mcp-server"
version = "4.0.6"
description = "Production-grade MCP remote server for Wazuh SIEM integration with SSE transport"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wazuh MCP Server Project", email = "info@wazuh-mcp-server.org"}
]
keywords = ["wazuh", "security", "mcp", "sse", "siem", "remote-server"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.40.0",
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/gensecaihq/Wazuh-MCP-Server"
Repository = "https://github.com/gensecaihq/Wazuh-MCP-Server"
"Bug Tracker" = "https://github.com/gensecaihq/Wazuh-MCP-Server/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["wazuh_mcp_server*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]